/*
 * $Id: ChangeLog,v 1.379 2007-07-28 18:25:44 guerra000 Exp $
 */
/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2007-07-28 13:25 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/winprint.prg
    ! Fixed default values for ROUNDC and ROUNDR in @...ROUNDRECT.

2007-07-27 11:54 UTC-0500 Ciro Vargas C. <pcman2010@yahoo.com>
  * source/h_print.prg
  * source/h_grid.prg
  * source/h_xbrowse.prg
  * compile_bcc.bat
  * compile_pc.bat
    * revert new ole syntax to old ole syntax but preserve new hboleaut library

2007-07-26 09:02 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_combo.prg
    + TGridControlComboBoxText() subclass added, for manage string
      values from an array ("COMBOBOXTEXT" columncontrol).
  * Fixed columncontrol name checking.

2007-07-20 08:37 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_grid.prg
    ! Fixed typos in ::AddColumn() method.

2007-07-15 17:07 UTC-0500 Ciro Vargas C. <pcman2010@yahoo.com>
  * source/h_print.prg
  * source/h_grid.prg
  * source/h_xbrowse.prg
  * compile_bcc.bat
  * compile_pc.bat
    * change old ole syntax to new oleaut syntax and new library

2007-07-15 12:24 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_windows.prg
    * Help topic moved to a form's message.

2007-07-14 23:46 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * include/i_combo.ch
  * source/common_make.bat
  - source/c_combo.c
  * source/h_combo.prg
  * source/makelib_bcc.bat
  * source/makelib_minwg.bat
    ! Fixed / optimized value assignment when ITEMSOURCE is used.
    * Moved C code to h_combo.prg file.
    - c_combo.c file removed.
    * Codification style fixes.
  * source/c_image.c
  * source/h_image.prg
    ! OLE image takes same size than window.
    ! Image doesn't protects size.
  * source/h_splitbox.prg
    ! Buffer initialized.