@@ -1,5 +1,5 @@
 /*
- * $Id: h_checkbox.prg,v 1.14 2007-07-01 04:44:56 guerra000 Exp $
+ * $Id: h_checkbox.prg,v 1.15 2007-07-29 05:19:59 guerra000 Exp $
  */
 /*
  * ooHG source code:
@@ -206,7 +206,7 @@ LOCAL hBitMap, nAttrib
       IF ! ::lNoTransparent
          nAttrib += LR_LOADTRANSPARENT
       ENDIF
-      hBitMap := _OOHG_BitmapFromFile( Self, cPicture, nAttrib )
+      hBitMap := _OOHG_BitmapFromFile( Self, cPicture, nAttrib, ::AutoSize )
       ::AuxHandle := _OOHG_SetBitmap( Self, hBitMap, BM_SETIMAGE, .F., ::lScale )
       DeleteObject( hBitMap )
    ENDIF
@@ -228,7 +228,7 @@ METHOD Buffer( cBuffer ) CLASS TCheckBox
 LOCAL hBitMap
    If ValType( cBuffer ) $ "CM"
       DeleteObject( ::AuxHandle )
-      hBitMap := _OOHG_BitmapFromBuffer( Self, cBuffer )
+      hBitMap := _OOHG_BitmapFromBuffer( Self, cBuffer, ::AutoSize )
       ::AuxHandle := _OOHG_SetBitmap( Self, hBitMap, BM_SETIMAGE, .F., ::lScale )
       DeleteObject( hBitMap )
    EndIf
